syntax = "proto3";

package fixbug;

option cc_generic_services = true;
// 定义登录请求消息类型
message LoginRequest // name pwd
{
    bytes name = 1;
    bytes pwd = 2;
    map<int32, string> test = 3;
}

// 定义响应登录消息类型

message LoginResponse
{
    ResultCode result = 1;

    bool success = 3;
}

message GetFriendListsRequest
{
    uint32 userid =1;
}

message User
{
    bytes name =1;
    uint32 age = 2;
    enum Sex
    {
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3; 
}

message GetFriendListsResponse
{
    ResultCode result = 1;
    repeated User friend_list = 2;  // 定义了一个列表类型
}

message ResultCode
{
    int32 errcode = 1;
    bytes errmsg = 2;
}

service UserServiceRpc
{
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc GetFriendLists(GetFriendListsRequest) returns(GetFriendListsResponse);
}